--- a/common.ca.po
+++ b/common.ca.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# Antonio <piuntn@gmail.com>, 2024
 # LegendGuard, 2020
 # LegendGuard, 2020-2021,2023
 # Roi Asher Gerszkoviez <gerszkoviez@gmail.com>, 2017
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-17 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Yotta Mxt, 2022\n"
+"Last-Translator: Antonio <piuntn@gmail.com>, 2024\n"
 "Language-Team: Catalan (http://app.transifex.com/team-xonotic/xonotic/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -312,7 +313,7 @@ msgstr "QMCMD^objecte gratuït, icona"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:834
 msgid "QMCMD^took item (l:%l^7)"
-msgstr "QMCMD^va prendre l'objecte (l:% l ^ 7)"
+msgstr "QMCMD^va prendre l'objecte (l:%l^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:834
 msgid "QMCMD^took item, icon"
