--- a/common.pt.po
+++ b/common.pt.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# Antonio <piuntn@gmail.com>, 2024
 # Ivan Paulos Tomé <greylica@gmail.com>, 2016
 # Jean Trindade Pereira <jean_trindade2@hotmail.com>, 2015-2018
 # lecalam, 2024
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-17 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Rui <xymarior@yandex.com>, 2018\n"
+"Last-Translator: Antonio <piuntn@gmail.com>, 2024\n"
 "Language-Team: Portuguese (http://app.transifex.com/team-xonotic/xonotic/"
 "language/pt/)\n"
 "Language: pt\n"
@@ -9878,6 +9879,8 @@ msgid ""
 "While connected language changes will be applied only to the menu, full "
 "language changes will take effect starting from the next game"
 msgstr ""
+"Quando si è connessi i cambiamenti di lingua saranno applicati solo al menu, "
+"le modifiche complete saranno applicate a partire dalla prossima partita"
 
 #: qcsrc/menu/xonotic/dialog_settings_user_languagewarning.qc:18
 msgid "Disconnect now"
