--- a/common.gl.po
+++ b/common.gl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-17 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: nin hum <ninhum@gmx.com>, 2024\n"
+"Last-Translator: Antonio <piuntn@gmail.com>, 2024\n"
 "Language-Team: Galician (http://app.transifex.com/team-xonotic/xonotic/"
 "language/gl/)\n"
 "Language: gl\n"
@@ -582,7 +582,7 @@ msgstr "SCO^Asasinatos portador pelota"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:141
 msgid "SCO^bctime"
-msgstr "SCO^cbtempo"
+msgstr "SCO^Tempo portador pelota"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:141
 msgid "Total amount of time holding the ball in Keepaway"
