--- a/common.ro.po
+++ b/common.ro.po
@@ -19,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-17 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Edward, 2024\n"
+"Last-Translator: Tudor Ionel <tropiko.matrox@gmail.com>, 2015\n"
 "Language-Team: Romanian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/ro/)\n"
 "Language: ro\n"
