--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -162,7 +162,7 @@ msgstr "服务器信息"
 #: qcsrc/client/hud/panel/infomessages.qc:133
 #, c-format
 msgid "^2You're queued to join the %s%s^2 team"
-msgstr ""
+msgstr "^2您在加入%s%s队^2的队列中"
 
 #: qcsrc/client/hud/panel/infomessages.qc:136
 #, c-format
@@ -709,7 +709,7 @@ msgstr "杀敌"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "Number of generators destroyed"
-msgstr "摧毁的发电机数量"
+msgstr "摧毁的发电机数"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "SCO^generators"
@@ -1265,7 +1265,7 @@ msgstr "海里每时"
 
 #: qcsrc/client/main.qc:1206
 msgid "Checkpoint times:"
-msgstr ""
+msgstr "检查点时间："
 
 #: qcsrc/client/main.qc:1400
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:26
@@ -1428,7 +1428,7 @@ msgstr "正在请求预览……"
 
 #: qcsrc/client/view.qc:903
 msgid "Nade timer"
-msgstr "手雷计时"
+msgstr "榴弹计时"
 
 #: qcsrc/client/view.qc:908
 msgid "Capture progress"
@@ -1787,7 +1787,7 @@ msgstr "杀敌数达到目标后，一轮竞赛结束"
 
 #: qcsrc/common/minigames/cl_minigames.qc:287
 msgid "Spectators:"
-msgstr "旁观者："
+msgstr "观察者:"
 
 #: qcsrc/common/minigames/cl_minigames.qc:424
 msgid "It's your turn"
@@ -2187,57 +2187,57 @@ msgstr "额外的生命"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:18
 msgid "Napalm grenade"
-msgstr "烈焰手雷"
+msgstr "烈焰榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:28
 msgid "Ice grenade"
-msgstr "寒冰手雷"
+msgstr "冰榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:38
 msgid "Translocate grenade"
-msgstr "穿越手雷"
+msgstr "穿越榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:48
 msgid "Spawn grenade"
-msgstr "重生点手雷"
+msgstr "重生点榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:58
 msgid "Heal grenade"
-msgstr "治疗手雷"
+msgstr "治愈榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:68
 msgid "Monster grenade"
-msgstr "怪物手雷"
+msgstr "怪物榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:78
 msgid "Entrap grenade"
-msgstr "滞速手雷"
+msgstr "滞速榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:88
 msgid "Veil grenade"
-msgstr "藏匿手雷"
+msgstr "藏匿榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr "弹药手雷"
+msgstr "弹药榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr "暗影手雷"
+msgstr "暗影榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:137
 #: qcsrc/menu/xonotic/keybinder.qc:60
 msgid "drop weapon / throw nade"
-msgstr "丢出武器 / 扔手雷"
+msgstr "丢出武器 / 扔榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #, c-format
 msgid "^3nades^8 are enabled, press ^3%s^8 to use them"
-msgstr "^8启用了^3手雷^8，按 ^3%s^8 投掷"
+msgstr "^3榴弹^8已启用，按 ^3%s^8 投掷"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qh:123
 msgid "Grenade"
-msgstr "手雷"
+msgstr "榴弹"
 
 #: qcsrc/common/mutators/mutator/offhand_blaster/cl_offhand_blaster.qc:11
 #, c-format
@@ -2694,7 +2694,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 推到一只怪物面前%s%s"
 #: qcsrc/common/notifications/all.inc:283
 #, c-format
 msgid "^BG%s%s^K1 was blown up by ^BG%s^K1's Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的手雷引爆了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的榴弹引爆了%s%s"
 
 #: qcsrc/common/notifications/all.inc:284
 #, c-format
@@ -2704,22 +2704,22 @@ msgstr "^BG%s%s^K1 离燃烧爆炸太近%s%s"
 #: qcsrc/common/notifications/all.inc:284
 #, c-format
 msgid "^BG%s%s^K1 was burned to death by ^BG%s^K1's Napalm Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的燃烧手雷烧死了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的燃烧榴弹烧死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:285
 #, c-format
 msgid "^BG%s%s^K1 was blown up by ^BG%s^K1's Ice Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的寒冰手雷引爆了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的冰榴弹引爆了%s%s"
 
 #: qcsrc/common/notifications/all.inc:286
 #, c-format
 msgid "^BG%s%s^K1 was frozen to death by ^BG%s^K1's Ice Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的寒冰手雷冻死了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的冰榴弹冻死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:287
 #, c-format
 msgid "^BG%s%s^K1 has not been healed by ^BG%s^K1's Healing Nade%s%s"
-msgstr "^BG%s%s^K1 没有被 ^BG%s^K1 的治疗手雷所治愈%s%s"
+msgstr "^BG%s%s^K1 没有被 ^BG%s^K1 的治愈榴弹所治愈%s%s"
 
 #: qcsrc/common/notifications/all.inc:288
 #, c-format
@@ -2927,18 +2927,18 @@ msgstr "^BG%s^K1 亲身体验了僵尸的一堂功夫课%s%s"
 #: qcsrc/common/notifications/all.inc:327
 #, c-format
 msgid "^BG%s^K1 mastered the art of self-nading%s%s"
-msgstr "^BG%s^K1 掌握了手雷自爆艺术%s%s"
+msgstr "^BG%s^K1 掌握了榴弹自爆艺术%s%s"
 
 #: qcsrc/common/notifications/all.inc:326
 #, c-format
 msgid ""
 "^BG%s^K1 decided to take a look at the results of their napalm explosion%s%s"
-msgstr "^BG%s^K1 看了看自己燃烧手雷的爆炸效果%s%s"
+msgstr "^BG%s^K1 看了看自己燃烧榴弹的爆炸效果%s%s"
 
 #: qcsrc/common/notifications/all.inc:326
 #, c-format
 msgid "^BG%s^K1 was burned to death by their own Napalm Nade%s%s"
-msgstr "^BG%s^K1 被自己的燃烧手雷烧死了%s%s"
+msgstr "^BG%s^K1 被自己的燃烧榴弹烧死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:328
 #, c-format
@@ -2948,12 +2948,12 @@ msgstr "^BG%s^K1 觉得有点冷%s%s"
 #: qcsrc/common/notifications/all.inc:328
 #, c-format
 msgid "^BG%s^K1 was frozen to death by their own Ice Nade%s%s"
-msgstr "^BG%s^K1 被自己的寒冰手雷冻死了%s%s"
+msgstr "^BG%s^K1 被自己的冻结榴弹冻死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:329
 #, c-format
 msgid "^BG%s^K1's Healing Nade didn't quite heal them%s%s"
-msgstr "^BG%s^K1 的治疗手雷并没怎么治愈自己%s%s"
+msgstr "^BG%s^K1 的治愈榴弹并没怎么治愈自己%s%s"
 
 #: qcsrc/common/notifications/all.inc:330
 #, c-format
@@ -3133,7 +3133,7 @@ msgstr "^BG%s^K3 通过跌落复活"
 #: qcsrc/common/notifications/all.inc:368
 #, c-format
 msgid "^BG%s^K3 was revived by their Nade explosion"
-msgstr "^BG%s^K3 被手雷爆炸复活"
+msgstr "^BG%s^K3 被他的榴弹爆炸复活"
 
 #: qcsrc/common/notifications/all.inc:369
 #, c-format
@@ -3252,12 +3252,12 @@ msgstr "^BG%s^F3 加入^TC^TT队^BG游戏"
 #: qcsrc/common/notifications/all.inc:395
 #, c-format
 msgid "^BG%s^F3 wants to play on the ^TC^TT team"
-msgstr ""
+msgstr "^BG%s^F3 想加入^TC^TT队游玩"
 
 #: qcsrc/common/notifications/all.inc:396
 #, c-format
 msgid "^BG%s^F3 wants to play"
-msgstr ""
+msgstr "^BG%s^F3 想加入游戏"
 
 #: qcsrc/common/notifications/all.inc:398
 #: qcsrc/common/notifications/all.inc:728
@@ -3380,12 +3380,12 @@ msgstr "^BG%s^F3 在挂机 %s 秒后被移到^BG旁观者^F3中"
 #: qcsrc/common/notifications/all.inc:429
 #, c-format
 msgid "^BG%s^F3 has left the queue after idling for %s seconds"
-msgstr ""
+msgstr "^BG%s^F3 在不活动  %s 秒后离开队列"
 
 #: qcsrc/common/notifications/all.inc:430
 #, c-format
 msgid "^BG%s^F3 was moved to^BG spectators^F3 for balance reasons"
-msgstr ""
+msgstr "^F3因游戏平衡需要，^BG%s^F3 被移至^BG观察者^F3中"
 
 #: qcsrc/common/notifications/all.inc:431
 msgid ""
@@ -3411,7 +3411,7 @@ msgstr "^BG%s^F3 现在正在^BG旁观"
 #: qcsrc/common/notifications/all.inc:435
 #, c-format
 msgid "^BG%s^F3 has left the queue"
-msgstr ""
+msgstr "^BG%s^F3 离开了队列"
 
 #: qcsrc/common/notifications/all.inc:437
 #, c-format
@@ -3448,14 +3448,14 @@ msgstr "^BG%s^BG 打破了自己 %s%s^BG 记录：%s%s %s"
 msgid ""
 "^BG%s^BG scored a new record with ^F2%s^BG, but unfortunately lacks a UID "
 "and will be lost."
-msgstr "^BG%s^BG 以 ^F2%s^BG 创造了新纪录，但不幸因缺少 UID 而丢失。"
+msgstr "^BG%s^BG 以 ^F2%s^BG 创造了新纪录，但不幸因为缺少 UID 而将丢失。"
 
 #: qcsrc/common/notifications/all.inc:444
 #, c-format
 msgid ""
 "^BG%s^BG scored a new record with ^F2%s^BG, but is anonymous and will be "
 "lost."
-msgstr "^BG%s^BG 以 ^F2%s^BG 创造了新纪录，但因匿名而丢失。"
+msgstr "^BG%s^BG 以 ^F2%s^BG 创造了新纪录，但因其匿名而将丢失。"
 
 #: qcsrc/common/notifications/all.inc:445
 #, c-format
@@ -3478,7 +3478,7 @@ msgstr "^TC^TT队^BG得分！"
 msgid ""
 "^F2You have to become a player within the next %s, otherwise you will be "
 "kicked, because spectating isn't allowed at this time!"
-msgstr "^F2你必须在 %s内参与游戏，否则会被踢出。现在不允许旁观！"
+msgstr "^F2你必须在 %s内参与游戏，否则将被踢出。现在不允许旁观！"
 
 #: qcsrc/common/notifications/all.inc:453
 #, c-format
@@ -3549,7 +3549,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的弧光电束爆破了%s%s"
 #: qcsrc/common/notifications/all.inc:469
 #, c-format
 msgid "^BG%s^K1 played with Arc bolts%s%s"
-msgstr "^BG%s^K1 把玩弧光电束%s%s"
+msgstr "^BG%s^K1 试图把玩弧光电束%s%s"
 
 #: qcsrc/common/notifications/all.inc:470
 #, c-format
@@ -3604,7 +3604,7 @@ msgstr "^BG%s%s^K1 离 ^BG%s^K1 的电射球太近%s%s"
 #: qcsrc/common/notifications/all.inc:480
 #, c-format
 msgid "^BG%s^K1 played with Electro bolts%s%s"
-msgstr "^BG%s^K1 把玩电射枪光束%s%s"
+msgstr "^BG%s^K1 试图把玩电射枪光束%s%s"
 
 #: qcsrc/common/notifications/all.inc:481
 #, c-format
@@ -3644,7 +3644,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的哈格火箭弹痛击%s%s"
 #: qcsrc/common/notifications/all.inc:488
 #, c-format
 msgid "^BG%s^K1 played with tiny Hagar rockets%s%s"
-msgstr "^BG%s^K1 把玩哈格火箭弹%s%s"
+msgstr "^BG%s^K1 试图把玩小哈格火箭弹%s%s"
 
 #: qcsrc/common/notifications/all.inc:489
 #, c-format
@@ -3675,7 +3675,7 @@ msgstr "^BG%s^K1 用乱音克莱因瓶伤到了自己的耳朵%s%s"
 #: qcsrc/common/notifications/all.inc:494
 #, c-format
 msgid "^BG%s%s^K1 was sniped by ^BG%s^K1's Machine Gun%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 用机枪击杀%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 用机枪狙击%s%s"
 
 #: qcsrc/common/notifications/all.inc:495
 #, c-format
@@ -3701,22 +3701,22 @@ msgstr "^BG%s^K1 忘记自己放置了地雷%s%s"
 #: qcsrc/common/notifications/all.inc:499
 #, c-format
 msgid "^BG%s%s^K1 got too close to ^BG%s^K1's Mortar grenade%s%s"
-msgstr "^BG%s%s^K1 离 ^BG%s^K1 的迫击炮榴弹太近%s%s"
+msgstr "^BG%s%s^K1 离 ^BG%s^K1 打出的榴弹太近%s%s"
 
 #: qcsrc/common/notifications/all.inc:500
 #, c-format
 msgid "^BG%s%s^K1 ate ^BG%s^K1's Mortar grenade%s%s"
-msgstr "^BG%s%s^K1 吃了一记 ^BG%s^K1 的迫击炮榴弹%s%s"
+msgstr "^BG%s%s^K1 吃了一记 ^BG%s^K1 的榴弹%s%s"
 
 #: qcsrc/common/notifications/all.inc:501
 #, c-format
 msgid "^BG%s^K1 didn't see their own Mortar grenade%s%s"
-msgstr "^BG%s^K1 没能躲过自己的迫击炮榴弹%s%s"
+msgstr "^BG%s^K1 没能躲过自己的榴弹%s%s"
 
 #: qcsrc/common/notifications/all.inc:502
 #, c-format
 msgid "^BG%s^K1 blew themself up with their own Mortar%s%s"
-msgstr "^BG%s^K1 被自己的迫击炮炸飞了%s%s"
+msgstr "^BG%s^K1 被自己的榴弹炸飞了%s%s"
 
 #: qcsrc/common/notifications/all.inc:503
 #, c-format
@@ -3803,7 +3803,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的瞄准者盯住了%s%s"
 #: qcsrc/common/notifications/all.inc:519
 #, c-format
 msgid "^BG%s^K1 played with tiny Seeker rockets%s%s"
-msgstr "^BG%s^K1 把玩跟踪火箭%s%s"
+msgstr "^BG%s^K1 试图把玩跟踪火箭%s%s"
 
 #: qcsrc/common/notifications/all.inc:520
 #, c-format
@@ -4134,11 +4134,11 @@ msgstr "^K1%s你在打字时让 ^BG%s^K1 得分^BG"
 #: qcsrc/common/notifications/all.inc:641
 #, c-format
 msgid "^BGPress ^F2%s^BG again to toss the nade!"
-msgstr "^BG再按一次 ^F2%s^BG 扔出手雷！"
+msgstr "^BG再按一次 ^F2%s^BG 来扔出榴弹！"
 
 #: qcsrc/common/notifications/all.inc:642
 msgid "^F2You got a ^K1BONUS GRENADE^F2!"
-msgstr "^F2你得到了一个^K1奖励手手雷^F2！"
+msgstr "^F2你得到了一个^K1奖励手榴弹^F2！"
 
 #: qcsrc/common/notifications/all.inc:644
 #, c-format
@@ -4212,7 +4212,7 @@ msgstr "^K1尝起来像鸡肉！"
 
 #: qcsrc/common/notifications/all.inc:655
 msgid "^K1You forgot to put the pin back in!"
-msgstr "^K1你忘记把拉环塞回手雷了！"
+msgstr "^K1你忘记把拉环塞回榴弹了！"
 
 #: qcsrc/common/notifications/all.inc:656
 msgid "^K1Hanging around a napalm explosion is bad!"
@@ -4228,7 +4228,7 @@ msgstr "^K1你变得有些凉！"
 
 #: qcsrc/common/notifications/all.inc:658
 msgid "^K1Your Healing Nade is a bit defective"
-msgstr "^K1你的治疗手雷有点不管用"
+msgstr "^K1你的治愈榴弹有点不管用"
 
 #: qcsrc/common/notifications/all.inc:659
 msgid "^K1You are respawning for running out of ammo..."
@@ -4377,6 +4377,8 @@ msgid ""
 "^K1Teams unbalanced!\n"
 "^BGMoving %s^BG to spectators in ^COUNT..."
 msgstr ""
+"^K1队伍不平衡！\n"
+"^BG将在 ^COUNT 秒后把 %s^BG 移到观察者……"
 
 #: qcsrc/common/notifications/all.inc:687
 #, c-format
@@ -4472,16 +4474,16 @@ msgstr "^K1无法加入指定的小游戏！"
 
 #: qcsrc/common/notifications/all.inc:724
 msgid "^BGYou are now queued to join the game."
-msgstr ""
+msgstr "^BG你加入了游戏队列。"
 
 #: qcsrc/common/notifications/all.inc:725
 msgid "^BGYou are now queued to join on ^TC^TT^BG team."
-msgstr ""
+msgstr "^BG你加入了^TC^TT队^BG队列。"
 
 #: qcsrc/common/notifications/all.inc:726
 #, c-format
 msgid "^K2Please choose a different team! %s^K2 chose ^TC^TT^K2 first."
-msgstr ""
+msgstr "^K2请选择另外的队伍！%s ^K2率先选择了^TC^TT队^BG。"
 
 #: qcsrc/common/notifications/all.inc:730
 msgid "^BGYou picked up the ball"
@@ -4851,7 +4853,7 @@ msgstr "丢出旗帜"
 
 #: qcsrc/common/notifications/all.qh:442
 msgid "throw nade"
-msgstr "扔手雷"
+msgstr "扔榴弹"
 
 #: qcsrc/common/notifications/all.qh:468
 #, c-format
@@ -5317,7 +5319,7 @@ msgstr "无初始武器"
 
 #: qcsrc/common/util.qc:271
 msgid "Nades"
-msgstr "手雷"
+msgstr "榴弹"
 
 #: qcsrc/common/util.qc:272
 msgid "Offhand blaster"
@@ -5788,7 +5790,7 @@ msgstr "地雷放置器"
 
 #: qcsrc/common/weapons/weapon/mortar.qh:20
 msgid "Mortar"
-msgstr "迫击炮"
+msgstr "榴弹枪"
 
 #: qcsrc/common/weapons/weapon/porto.qh:18
 msgid "Port-O-Launch"
@@ -9669,7 +9671,7 @@ msgstr "将血液与肢体替换为不包含任何血腥效果的内容"
 msgid ""
 "While connected language changes will be applied only to the menu, full "
 "language changes will take effect starting from the next game"
-msgstr ""
+msgstr "语言目前只应用于菜单。当下一场竞赛开始时，语言会应用于游戏。"
 
 #: qcsrc/menu/xonotic/dialog_settings_user_languagewarning.qc:18
 msgid "Disconnect now"
