--- a/common.zh_TW.po
+++ b/common.zh_TW.po
@@ -164,7 +164,7 @@ msgstr "伺服器資訊"
 #: qcsrc/client/hud/panel/infomessages.qc:133
 #, c-format
 msgid "^2You're queued to join the %s%s^2 team"
-msgstr ""
+msgstr "^2您在加入%s%s隊^2的佇列中"
 
 #: qcsrc/client/hud/panel/infomessages.qc:136
 #, c-format
@@ -711,7 +711,7 @@ msgstr "殺敵"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "Number of generators destroyed"
-msgstr "摧毀的發電機數量"
+msgstr "摧毀的發電機數"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "SCO^generators"
@@ -1268,7 +1268,7 @@ msgstr "海里每時"
 
 #: qcsrc/client/main.qc:1206
 msgid "Checkpoint times:"
-msgstr ""
+msgstr "檢查點時間："
 
 #: qcsrc/client/main.qc:1400
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:26
@@ -1431,7 +1431,7 @@ msgstr "正在請求預覽……"
 
 #: qcsrc/client/view.qc:903
 msgid "Nade timer"
-msgstr "手雷計時"
+msgstr "榴彈計時"
 
 #: qcsrc/client/view.qc:908
 msgid "Capture progress"
@@ -1790,7 +1790,7 @@ msgstr "殺敵數達到目標後，一輪競賽結束"
 
 #: qcsrc/common/minigames/cl_minigames.qc:287
 msgid "Spectators:"
-msgstr "旁觀者："
+msgstr "觀察者:"
 
 #: qcsrc/common/minigames/cl_minigames.qc:424
 msgid "It's your turn"
@@ -2190,57 +2190,57 @@ msgstr "額外的生命"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:18
 msgid "Napalm grenade"
-msgstr "烈焰手雷"
+msgstr "烈焰榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:28
 msgid "Ice grenade"
-msgstr "寒冰手雷"
+msgstr "冰榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:38
 msgid "Translocate grenade"
-msgstr "穿越手雷"
+msgstr "穿越榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:48
 msgid "Spawn grenade"
-msgstr "復活點手雷"
+msgstr "復活點榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:58
 msgid "Heal grenade"
-msgstr "治療手雷"
+msgstr "治癒榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:68
 msgid "Monster grenade"
-msgstr "怪物手雷"
+msgstr "怪物榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:78
 msgid "Entrap grenade"
-msgstr "滯速手雷"
+msgstr "滯速榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:88
 msgid "Veil grenade"
-msgstr "藏匿手雷"
+msgstr "藏匿榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr "彈藥手雷"
+msgstr "彈藥榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr "暗影手雷"
+msgstr "暗影榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:137
 #: qcsrc/menu/xonotic/keybinder.qc:60
 msgid "drop weapon / throw nade"
-msgstr "丟出武器 / 扔手雷"
+msgstr "丟出武器 / 扔榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #, c-format
 msgid "^3nades^8 are enabled, press ^3%s^8 to use them"
-msgstr "^8啟用了^3手雷^8，按 ^3%s^8 投擲"
+msgstr "^3榴彈^8已啟用，按 ^3%s^8 投擲"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qh:123
 msgid "Grenade"
-msgstr "手雷"
+msgstr "榴彈"
 
 #: qcsrc/common/mutators/mutator/offhand_blaster/cl_offhand_blaster.qc:11
 #, c-format
@@ -2697,7 +2697,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 推到一隻怪物面前%s%s"
 #: qcsrc/common/notifications/all.inc:283
 #, c-format
 msgid "^BG%s%s^K1 was blown up by ^BG%s^K1's Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的手雷引爆了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的榴彈引爆了%s%s"
 
 #: qcsrc/common/notifications/all.inc:284
 #, c-format
@@ -2707,22 +2707,22 @@ msgstr "^BG%s%s^K1 離燃燒爆炸太近%s%s"
 #: qcsrc/common/notifications/all.inc:284
 #, c-format
 msgid "^BG%s%s^K1 was burned to death by ^BG%s^K1's Napalm Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的燃燒手雷燒死了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的燃燒榴彈燒死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:285
 #, c-format
 msgid "^BG%s%s^K1 was blown up by ^BG%s^K1's Ice Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的寒冰手雷引爆了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的冰榴彈引爆了%s%s"
 
 #: qcsrc/common/notifications/all.inc:286
 #, c-format
 msgid "^BG%s%s^K1 was frozen to death by ^BG%s^K1's Ice Nade%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的寒冰手雷凍死了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的冰榴彈凍死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:287
 #, c-format
 msgid "^BG%s%s^K1 has not been healed by ^BG%s^K1's Healing Nade%s%s"
-msgstr "^BG%s%s^K1 沒有被 ^BG%s^K1 的治療手雷所治癒%s%s"
+msgstr "^BG%s%s^K1 沒有被 ^BG%s^K1 的治癒榴彈所治癒%s%s"
 
 #: qcsrc/common/notifications/all.inc:288
 #, c-format
@@ -2930,18 +2930,18 @@ msgstr "^BG%s^K1 親身體驗了喪屍的一堂功夫課%s%s"
 #: qcsrc/common/notifications/all.inc:327
 #, c-format
 msgid "^BG%s^K1 mastered the art of self-nading%s%s"
-msgstr "^BG%s^K1 掌握了手雷自爆藝術%s%s"
+msgstr "^BG%s^K1 掌握了榴彈自爆藝術%s%s"
 
 #: qcsrc/common/notifications/all.inc:326
 #, c-format
 msgid ""
 "^BG%s^K1 decided to take a look at the results of their napalm explosion%s%s"
-msgstr "^BG%s^K1 看了看自己燃燒手雷的爆炸效果%s%s"
+msgstr "^BG%s^K1 看了看自己燃燒榴彈的爆炸效果%s%s"
 
 #: qcsrc/common/notifications/all.inc:326
 #, c-format
 msgid "^BG%s^K1 was burned to death by their own Napalm Nade%s%s"
-msgstr "^BG%s^K1 被自己的燃燒手雷燒死了%s%s"
+msgstr "^BG%s^K1 被自己的燃燒榴彈燒死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:328
 #, c-format
@@ -2951,12 +2951,12 @@ msgstr "^BG%s^K1 覺得有點冷%s%s"
 #: qcsrc/common/notifications/all.inc:328
 #, c-format
 msgid "^BG%s^K1 was frozen to death by their own Ice Nade%s%s"
-msgstr "^BG%s^K1 被自己的寒冰手雷凍死了%s%s"
+msgstr "^BG%s^K1 被自己的凍結榴彈凍死了%s%s"
 
 #: qcsrc/common/notifications/all.inc:329
 #, c-format
 msgid "^BG%s^K1's Healing Nade didn't quite heal them%s%s"
-msgstr "^BG%s^K1 的治療手雷並沒怎麼治癒自己%s%s"
+msgstr "^BG%s^K1 的治癒榴彈並沒怎麼治癒自己%s%s"
 
 #: qcsrc/common/notifications/all.inc:330
 #, c-format
@@ -3136,7 +3136,7 @@ msgstr "^BG%s^K3 透過跌落復活"
 #: qcsrc/common/notifications/all.inc:368
 #, c-format
 msgid "^BG%s^K3 was revived by their Nade explosion"
-msgstr "^BG%s^K3 被手雷爆炸復活"
+msgstr "^BG%s^K3 被他的榴彈爆炸復活"
 
 #: qcsrc/common/notifications/all.inc:369
 #, c-format
@@ -3255,12 +3255,12 @@ msgstr "^BG%s^F3 加入^TC^TT隊^BG遊戲"
 #: qcsrc/common/notifications/all.inc:395
 #, c-format
 msgid "^BG%s^F3 wants to play on the ^TC^TT team"
-msgstr ""
+msgstr "^BG%s^F3 想加入^TC^TT隊遊玩"
 
 #: qcsrc/common/notifications/all.inc:396
 #, c-format
 msgid "^BG%s^F3 wants to play"
-msgstr ""
+msgstr "^BG%s^F3 想加入遊戲"
 
 #: qcsrc/common/notifications/all.inc:398
 #: qcsrc/common/notifications/all.inc:728
@@ -3383,12 +3383,12 @@ msgstr "^BG%s^F3 在掛機 %s 秒後被移到^BG旁觀者^F3中"
 #: qcsrc/common/notifications/all.inc:429
 #, c-format
 msgid "^BG%s^F3 has left the queue after idling for %s seconds"
-msgstr ""
+msgstr "^BG%s^F3 在不活動  %s 秒後離開佇列"
 
 #: qcsrc/common/notifications/all.inc:430
 #, c-format
 msgid "^BG%s^F3 was moved to^BG spectators^F3 for balance reasons"
-msgstr ""
+msgstr "^F3因遊戲平衡需要，^BG%s^F3 被移至^BG觀察者^F3中"
 
 #: qcsrc/common/notifications/all.inc:431
 msgid ""
@@ -3414,7 +3414,7 @@ msgstr "^BG%s^F3 現在正在^BG旁觀"
 #: qcsrc/common/notifications/all.inc:435
 #, c-format
 msgid "^BG%s^F3 has left the queue"
-msgstr ""
+msgstr "^BG%s^F3 離開了佇列"
 
 #: qcsrc/common/notifications/all.inc:437
 #, c-format
@@ -3451,14 +3451,14 @@ msgstr "^BG%s^BG 打破了自己 %s%s^BG 記錄：%s%s %s"
 msgid ""
 "^BG%s^BG scored a new record with ^F2%s^BG, but unfortunately lacks a UID "
 "and will be lost."
-msgstr "^BG%s^BG 以 ^F2%s^BG 創造了新紀錄，但不幸因缺少 UID 而丟失。"
+msgstr "^BG%s^BG 以 ^F2%s^BG 創造了新紀錄，但不幸因為缺少 UID 而將丟失。"
 
 #: qcsrc/common/notifications/all.inc:444
 #, c-format
 msgid ""
 "^BG%s^BG scored a new record with ^F2%s^BG, but is anonymous and will be "
 "lost."
-msgstr "^BG%s^BG 以 ^F2%s^BG 創造了新紀錄，但因匿名而丟失。"
+msgstr "^BG%s^BG 以 ^F2%s^BG 創造了新紀錄，但因其匿名而將丟失。"
 
 #: qcsrc/common/notifications/all.inc:445
 #, c-format
@@ -3481,7 +3481,7 @@ msgstr "^TC^TT隊^BG得分！"
 msgid ""
 "^F2You have to become a player within the next %s, otherwise you will be "
 "kicked, because spectating isn't allowed at this time!"
-msgstr "^F2你必須在 %s內參與遊戲，否則會被踢出。現在不允許旁觀！"
+msgstr "^F2你必須在 %s內參與遊戲，否則將被踢出。現在不允許旁觀！"
 
 #: qcsrc/common/notifications/all.inc:453
 #, c-format
@@ -3552,7 +3552,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的弧光電束爆破了%s%s"
 #: qcsrc/common/notifications/all.inc:469
 #, c-format
 msgid "^BG%s^K1 played with Arc bolts%s%s"
-msgstr "^BG%s^K1 把玩弧光電束%s%s"
+msgstr "^BG%s^K1 試圖把玩弧光電束%s%s"
 
 #: qcsrc/common/notifications/all.inc:470
 #, c-format
@@ -3607,7 +3607,7 @@ msgstr "^BG%s%s^K1 離 ^BG%s^K1 的電射球太近%s%s"
 #: qcsrc/common/notifications/all.inc:480
 #, c-format
 msgid "^BG%s^K1 played with Electro bolts%s%s"
-msgstr "^BG%s^K1 把玩電射槍光束%s%s"
+msgstr "^BG%s^K1 試圖把玩電射槍光束%s%s"
 
 #: qcsrc/common/notifications/all.inc:481
 #, c-format
@@ -3647,7 +3647,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的哈格火箭彈痛擊%s%s"
 #: qcsrc/common/notifications/all.inc:488
 #, c-format
 msgid "^BG%s^K1 played with tiny Hagar rockets%s%s"
-msgstr "^BG%s^K1 把玩哈格火箭彈%s%s"
+msgstr "^BG%s^K1 試圖把玩小哈格火箭彈%s%s"
 
 #: qcsrc/common/notifications/all.inc:489
 #, c-format
@@ -3678,7 +3678,7 @@ msgstr "^BG%s^K1 用亂音克萊因瓶傷到了自己的耳朵%s%s"
 #: qcsrc/common/notifications/all.inc:494
 #, c-format
 msgid "^BG%s%s^K1 was sniped by ^BG%s^K1's Machine Gun%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 用機槍擊殺%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 用機槍狙擊%s%s"
 
 #: qcsrc/common/notifications/all.inc:495
 #, c-format
@@ -3704,22 +3704,22 @@ msgstr "^BG%s^K1 忘記自己放置了地雷%s%s"
 #: qcsrc/common/notifications/all.inc:499
 #, c-format
 msgid "^BG%s%s^K1 got too close to ^BG%s^K1's Mortar grenade%s%s"
-msgstr "^BG%s%s^K1 離 ^BG%s^K1 的迫击炮榴彈太近%s%s"
+msgstr "^BG%s%s^K1 離 ^BG%s^K1 打出的榴彈太近%s%s"
 
 #: qcsrc/common/notifications/all.inc:500
 #, c-format
 msgid "^BG%s%s^K1 ate ^BG%s^K1's Mortar grenade%s%s"
-msgstr "^BG%s%s^K1 吃了一記 ^BG%s^K1 的迫击炮榴彈%s%s"
+msgstr "^BG%s%s^K1 吃了一記 ^BG%s^K1 的榴彈%s%s"
 
 #: qcsrc/common/notifications/all.inc:501
 #, c-format
 msgid "^BG%s^K1 didn't see their own Mortar grenade%s%s"
-msgstr "^BG%s^K1 沒能躲過自己的迫击炮榴彈%s%s"
+msgstr "^BG%s^K1 沒能躲過自己的榴彈%s%s"
 
 #: qcsrc/common/notifications/all.inc:502
 #, c-format
 msgid "^BG%s^K1 blew themself up with their own Mortar%s%s"
-msgstr "^BG%s^K1 被自己的迫击炮炸飛了%s%s"
+msgstr "^BG%s^K1 被自己的榴彈炸飛了%s%s"
 
 #: qcsrc/common/notifications/all.inc:503
 #, c-format
@@ -3806,7 +3806,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 的瞄準者盯住了%s%s"
 #: qcsrc/common/notifications/all.inc:519
 #, c-format
 msgid "^BG%s^K1 played with tiny Seeker rockets%s%s"
-msgstr "^BG%s^K1 把玩跟蹤火箭%s%s"
+msgstr "^BG%s^K1 試圖把玩跟蹤火箭%s%s"
 
 #: qcsrc/common/notifications/all.inc:520
 #, c-format
@@ -4137,11 +4137,11 @@ msgstr "^K1%s你在打字時讓 ^BG%s^K1 得分^BG"
 #: qcsrc/common/notifications/all.inc:641
 #, c-format
 msgid "^BGPress ^F2%s^BG again to toss the nade!"
-msgstr "^BG再按一次 ^F2%s^BG 扔出手雷！"
+msgstr "^BG再按一次 ^F2%s^BG 來扔出榴彈！"
 
 #: qcsrc/common/notifications/all.inc:642
 msgid "^F2You got a ^K1BONUS GRENADE^F2!"
-msgstr "^F2你得到了一個^K1獎勵手手雷^F2！"
+msgstr "^F2你得到了一個^K1獎勵手榴彈^F2！"
 
 #: qcsrc/common/notifications/all.inc:644
 #, c-format
@@ -4215,7 +4215,7 @@ msgstr "^K1嚐起來像雞肉！"
 
 #: qcsrc/common/notifications/all.inc:655
 msgid "^K1You forgot to put the pin back in!"
-msgstr "^K1你忘記把拉環塞回手雷了！"
+msgstr "^K1你忘記把拉環塞回榴彈了！"
 
 #: qcsrc/common/notifications/all.inc:656
 msgid "^K1Hanging around a napalm explosion is bad!"
@@ -4231,7 +4231,7 @@ msgstr "^K1你變得有些涼！"
 
 #: qcsrc/common/notifications/all.inc:658
 msgid "^K1Your Healing Nade is a bit defective"
-msgstr "^K1你的治療手雷有點不管用"
+msgstr "^K1你的治癒榴彈有點不管用"
 
 #: qcsrc/common/notifications/all.inc:659
 msgid "^K1You are respawning for running out of ammo..."
@@ -4380,6 +4380,8 @@ msgid ""
 "^K1Teams unbalanced!\n"
 "^BGMoving %s^BG to spectators in ^COUNT..."
 msgstr ""
+"^K1隊伍不平衡！\n"
+"^BG將在 ^COUNT 秒後把 %s^BG 移到觀察者……"
 
 #: qcsrc/common/notifications/all.inc:687
 #, c-format
@@ -4475,16 +4477,16 @@ msgstr "^K1無法加入指定的小遊戲！"
 
 #: qcsrc/common/notifications/all.inc:724
 msgid "^BGYou are now queued to join the game."
-msgstr ""
+msgstr "^BG你加入了遊戲佇列。"
 
 #: qcsrc/common/notifications/all.inc:725
 msgid "^BGYou are now queued to join on ^TC^TT^BG team."
-msgstr ""
+msgstr "^BG你加入了^TC^TT隊^BG佇列。"
 
 #: qcsrc/common/notifications/all.inc:726
 #, c-format
 msgid "^K2Please choose a different team! %s^K2 chose ^TC^TT^K2 first."
-msgstr ""
+msgstr "^K2請選擇另外的隊伍！%s ^K2率先選擇了^TC^TT隊^BG。"
 
 #: qcsrc/common/notifications/all.inc:730
 msgid "^BGYou picked up the ball"
@@ -4854,7 +4856,7 @@ msgstr "丟出旗子"
 
 #: qcsrc/common/notifications/all.qh:442
 msgid "throw nade"
-msgstr "扔手雷"
+msgstr "扔榴彈"
 
 #: qcsrc/common/notifications/all.qh:468
 #, c-format
@@ -5320,7 +5322,7 @@ msgstr "無初始武器"
 
 #: qcsrc/common/util.qc:271
 msgid "Nades"
-msgstr "手雷"
+msgstr "榴彈"
 
 #: qcsrc/common/util.qc:272
 msgid "Offhand blaster"
@@ -5791,7 +5793,7 @@ msgstr "地雷放置器"
 
 #: qcsrc/common/weapons/weapon/mortar.qh:20
 msgid "Mortar"
-msgstr "迫击炮"
+msgstr "榴彈槍"
 
 #: qcsrc/common/weapons/weapon/porto.qh:18
 msgid "Port-O-Launch"
@@ -9672,7 +9674,7 @@ msgstr "將血液與肢體替換為不包含任何血腥效果的內容"
 msgid ""
 "While connected language changes will be applied only to the menu, full "
 "language changes will take effect starting from the next game"
-msgstr ""
+msgstr "語言目前只應用於選單。當下一場競賽開始時，語言會應用於遊戲。"
 
 #: qcsrc/menu/xonotic/dialog_settings_user_languagewarning.qc:18
 msgid "Disconnect now"
