--- a/common.uk.po
+++ b/common.uk.po
@@ -14,6 +14,7 @@
 # Ihor <ihor@noleron.com>, 2021
 # Illia Serediuk, 2022
 # Illia Serediuk, 2022
+# Vasyl Kushniruk, 2024
 # Dmitro Sokhin <gamebot@ex.ua>, 2015
 # Ihor <ihor@noleron.com>, 2021
 # Ihor <ihor@noleron.com>, 2021
@@ -23,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-17 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Ihor <ihor@noleron.com>, 2021\n"
+"Last-Translator: Vasyl Kushniruk, 2024\n"
 "Language-Team: Ukrainian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/uk/)\n"
 "Language: uk\n"
@@ -48,12 +49,12 @@ msgstr "^1Не вдалося записати в %s"
 #: qcsrc/client/hud/panel/centerprint.qc:197
 #, c-format
 msgid "Title at %s"
-msgstr ""
+msgstr "Назва за %s"
 
 #: qcsrc/client/hud/panel/centerprint.qc:202
 #, c-format
 msgid "^3Countdown message at time %s, seconds left: ^COUNT"
-msgstr ""
+msgstr "^3Зворотній відлік часу %s, секунд залишилося: ^COUNT"
 
 #: qcsrc/client/hud/panel/centerprint.qc:204
 #, c-format
@@ -74,7 +75,7 @@ msgstr "Загальне повідомлення"
 #: qcsrc/client/hud/panel/centerprint.qc:293
 #: qcsrc/client/hud/panel/centerprint.qc:303
 msgid "vs"
-msgstr ""
+msgstr "проти"
 
 #: qcsrc/client/hud/panel/chat.qc:165
 msgid "^3Player^7: This is the chat area."
@@ -129,7 +130,7 @@ msgstr "^1Використовуйте ^3%s^1 чи ^3%s^1 щоб змінити 
 #: qcsrc/client/hud/panel/infomessages.qc:113
 #, c-format
 msgid "^1Press ^3%s^1 to observe, ^3%s^1 to change camera mode"
-msgstr ""
+msgstr "^1Натисніть ^3%s^1 щоб спостерігати, ^3%s^1 щоб змінити перспективу"
 
 #: qcsrc/client/hud/panel/infomessages.qc:113
 #: qcsrc/client/hud/panel/infomessages.qc:115
@@ -160,7 +161,7 @@ msgstr "відомості про сервер"
 #: qcsrc/client/hud/panel/infomessages.qc:133
 #, c-format
 msgid "^2You're queued to join the %s%s^2 team"
-msgstr ""
+msgstr "^2Ти в черзі на приєднання до %s%s^2 команди"
 
 #: qcsrc/client/hud/panel/infomessages.qc:136
 #, c-format
@@ -315,11 +316,11 @@ msgstr "QMCMD^Командний чат"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:832
 msgid "QMCMD^strength soon"
-msgstr ""
+msgstr "QMCMD^сила незабаром"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:833
 msgid "QMCMD^free item %x^7 (l:%y^7)"
-msgstr ""
+msgstr "QMCMD^вільний предмет %x^7 (l:%y^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:833
 msgid "QMCMD^free item, icon"
@@ -327,7 +328,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:834
 msgid "QMCMD^took item (l:%l^7)"
-msgstr ""
+msgstr "QMCMD^взяв річ (l:%l^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:834
 msgid "QMCMD^took item, icon"
@@ -335,15 +336,15 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:835
 msgid "QMCMD^negative"
-msgstr ""
+msgstr "QMCMD^негативний"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:836
 msgid "QMCMD^positive"
-msgstr ""
+msgstr "QMCMD^позитивний"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:837
 msgid "QMCMD^need help (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
-msgstr ""
+msgstr "QMCMD^потрібна допомога (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:837
 msgid "QMCMD^need help, icon"
@@ -351,7 +352,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:838
 msgid "QMCMD^enemy seen (l:%y^7)"
-msgstr ""
+msgstr "QMCMD^помічено ворога (l:%y^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:838
 msgid "QMCMD^enemy seen, icon"
@@ -359,7 +360,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:839
 msgid "QMCMD^flag seen (l:%y^7)"
-msgstr ""
+msgstr "QMCMD^помічено прапор (l:%y^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:839
 msgid "QMCMD^flag seen, icon"
@@ -367,7 +368,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:840
 msgid "QMCMD^defending (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
-msgstr ""
+msgstr "QMCMD^захищати (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:840
 msgid "QMCMD^defending, icon"
@@ -375,7 +376,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:841
 msgid "QMCMD^roaming (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
-msgstr ""
+msgstr "QMCMD^роумінг (l:%l^7) (h:%h^7 a:%a^7 w:%w^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:841
 msgid "QMCMD^roaming, icon"
@@ -391,7 +392,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:843
 msgid "QMCMD^killed flagcarrier (l:%y^7)"
-msgstr ""
+msgstr "QMCMD^вбито носія прапору (l:%y^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:843
 msgid "QMCMD^killed flagcarrier, icon"
@@ -400,7 +401,7 @@ msgstr ""
 #: qcsrc/client/hud/panel/quickmenu.qc:844
 #, c-format
 msgid "QMCMD^dropped flag (l:%d^7)"
-msgstr ""
+msgstr "QMCMD^втратив прапор (l:%d^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:844
 msgid "QMCMD^dropped flag, icon"
@@ -412,7 +413,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:845
 msgid "QMCMD^dropped weapon %w^7 (l:%l^7)"
-msgstr ""
+msgstr "QMCMD^скинув зброю %w^7 (l:%l^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:846
 msgid "QMCMD^drop flag/key, icon"
@@ -420,33 +421,33 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:846
 msgid "QMCMD^dropped flag/key %w^7 (l:%l^7)"
-msgstr ""
+msgstr "QMCMD^втратив прапор/ключ %w^7 (l:%l^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:850
 msgid "QMCMD^Send private message to"
-msgstr ""
+msgstr "QMCMD^Надіслати приватне повідомлення до"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:852
 #: qcsrc/client/hud/panel/quickmenu.qc:882
 msgid "QMCMD^Settings"
-msgstr ""
+msgstr "QMCMD^Налаштування"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:853
 #: qcsrc/client/hud/panel/quickmenu.qc:860
 msgid "QMCMD^View/HUD settings"
-msgstr ""
+msgstr "QMCMD^Налаштування видимості/HUD-у"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:854
 msgid "QMCMD^3rd person view"
-msgstr ""
+msgstr "QMCMD^Вид від 3 особи"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:855
 msgid "QMCMD^Player models like mine"
-msgstr ""
+msgstr "QMCMD^Моделі гравців такі як моя"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:856
 msgid "QMCMD^Names above players"
-msgstr ""
+msgstr "QMCMD^Імена понад гравцями"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:857
 msgid "QMCMD^Crosshair per weapon"
