--- a/common.fr.po
+++ b/common.fr.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-12 16:09+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Hugo Locurcio, 2013-2014\n"
+"Last-Translator: Yannick Le Guen <leguen.yannick@gmail.com>, 2013-2024\n"
 "Language-Team: French (http://app.transifex.com/team-xonotic/xonotic/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -6510,9 +6510,9 @@ msgid ""
 "player name to get started.  You can change these options later through the "
 "menu system."
 msgstr ""
-"Bienvenue dans Xonotic, veuillez choisir votre langue et rentrer votre "
-"pseudonyme avant de commencer.  Vous pourrez changer ces options plus tard "
-"dans le menu du jeu."
+"Bienvenue sur Xonotic, veuillez sélectionner votre langue et entrer votre "
+"nom de joueur pour commencer.  Vous pouvez changer ces options plus tard via "
+"le système de menus."
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:51
 #: qcsrc/menu/xonotic/dialog_settings_input_userbind.qc:28
@@ -9162,7 +9162,7 @@ msgstr "Fondu :"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:118
 msgid "Player Names"
-msgstr "Noms de joueurs"
+msgstr "Noms des joueurs"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:120
 msgid "Show names above players"
@@ -9963,9 +9963,9 @@ msgid ""
 "While connected language changes will be applied only to the menu, full "
 "language changes will take effect starting from the next game"
 msgstr ""
-"En cours de partie, les changements de langue ne seront appliqués qu'au "
-"menu. Les changements de langue complets prendront effet lors de la "
-"prochaine partie."
+"En cours de partie, les changements de langue ne s'appliquent qu'au menu. "
+"Les changements de langue complets prendront effet à compter de la partie "
+"suivante."
 
 #: qcsrc/menu/xonotic/dialog_settings_user_languagewarning.qc:18
 msgid "Disconnect now"
@@ -10558,7 +10558,7 @@ msgid ""
 "again."
 msgstr ""
 "Hein ? Impossible de lancer cette partie (mode de jeu invalide). Re-filtrer "
-"pour que cela n'arrive plus."
+"pour que cela ne se reproduise pas."
 
 #: qcsrc/menu/xonotic/playerlist.qc:110
 msgid "spectator"
